fix: authentication on routes